--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.2",
-        "babel-preset-es2015": "^6.24.1"
+        "babel-preset-es2015": "^6.24.1",
+        "vue-router": "^3.5.1",
+        "vuex": "^3.6.2"
     }
 }
