--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
         "webpack-cli": "^4.5.0"
     },
     "dependencies": {
+        "@babel/core": "^7.12.16",
         "@fortawesome/fontawesome-free": "^5.15.2",
         "babel-preset-es2015": "^6.24.1",
         "bootstrap-vue": "^2.21.2",
+        "commander": "^2.20.3",
+        "cors": "^2.8.5",
         "node-sass": "^4.14.1",
         "vue-js-modal": "^2.0.0-rc.6",
         "vue-router": "^3.5.1",
         "vue-scrollactive": "^0.9.3",
         "vue-yandex-maps": "^0.10.9",
-        "vuex": "^3.6.2"
+        "vuex": "^3.6.2",
+        "yarn": "^1.22.10"
     }
 }
