--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "commander": "^2.20.3",
         "cors": "^2.8.5",
         "node-sass": "^4.14.1",
+        "swiper": "^5.2.0",
+        "vue-awesome-swiper": "^4.1.1",
         "vue-js-modal": "^2.0.0-rc.6",
         "vue-router": "^3.5.1",
         "vue-scrollactive": "^0.9.3",
