--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "babel-loader": "^8.2.2",
         "bootstrap": "^4.6.0",
         "css-loader": "^5.0.2",
         "eslint": "^7.20.0",
@@ -33,9 +32,10 @@
         "webpack-cli": "^4.5.0"
     },
     "dependencies": {
-        "@babel/core": "^7.12.16",
+        "@babel/core": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
         "@fortawesome/fontawesome-free": "^5.15.2",
-        "babel-preset-es2015": "^6.24.1",
+        "babel-loader": "^8.0.0",
         "bootstrap-vue": "^2.21.2",
         "commander": "^2.20.3",
         "cors": "^2.8.5",
