--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "vue-scrollactive": "^0.9.3",
         "vue-yandex-maps": "^0.10.9",
         "vuex": "^3.6.2",
+        "vuex-persistedstate": "^4.0.0-beta.3",
         "yarn": "^1.22.10"
     }
 }
