--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "node-sass": "^4.14.1",
         "swiper": "^5.2.0",
         "vue-awesome-swiper": "^4.1.1",
+        "vue-dadata": "^1.4.10",
         "vue-js-modal": "^2.0.0-rc.6",
         "vue-numeric-input": "^1.0.6",
         "vue-router": "^3.5.1",
