--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "eslint": "^7.20.0",
         "eslint-plugin-vue": "^7.6.0",
         "eslint-webpack-plugin": "^2.5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.5.1",
         "laravel-mix": "^6.0.11",
         "laravel-mix-eslint": "^0.2.0",
         "lodash": "^4.17.20",
@@ -39,6 +39,7 @@
         "bootstrap-vue": "^2.21.2",
         "commander": "^2.20.3",
         "cors": "^2.8.5",
+        "hquery": "^1.0.0",
         "node-sass": "^4.14.1",
         "swiper": "^5.2.0",
         "vue-awesome-swiper": "^4.1.1",
