--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,9 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+   Header set Access-Control-Allow-Origin "*"
+   Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD"
+
     RewriteEngine On
 
     # Handle Authorization Header
