--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "vue-awesome-swiper": "^4.1.1",
         "vue-js-modal": "^2.0.0-rc.6",
         "vue-numeric-input": "^1.0.6",
+        "vue-phone-mask-input": "^1.1.11",
         "vue-router": "^3.5.1",
         "vue-scrollactive": "^0.9.3",
         "vue-yandex-maps": "^0.10.9",
