--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "vue-phone-mask-input": "^1.1.11",
         "vue-router": "^3.5.1",
         "vue-scrollactive": "^0.9.3",
+        "vue-the-mask": "^0.11.1",
         "vue-yandex-maps": "^0.10.9",
         "vuex": "^3.6.2",
         "vuex-persistedstate": "^4.0.0-beta.3",
