--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "suggestions-jquery": "^21.2.0",
         "swiper": "^5.2.0",
         "vue-awesome-swiper": "^4.1.1",
+        "vue-cryptojs": "^2.1.5",
         "vue-js-modal": "^2.0.0-rc.6",
         "vue-numeric-input": "^1.0.6",
         "vue-phone-mask-input": "^1.1.11",
